<resources>
    <string name="app_name">FitnessApplication</string>
    <string name="map_api_key">AIzaSyCvp5FLhPWNUt5QuSl10eUymuZ9_0tpYdw</string>
    <!--    Splash -->
    <string name="splash_tv_button_start">Get started</string>
    <string name="splash_tv_title">Everybody Can Train</string>
    <!--     SignUp-->
    <string name="signup_hint_password">Password</string>
    <string name="signup_hint_email">Email</string>
    <string name="signup_hint_last_name">Last Name</string>
    <string name="signup_hint_first_name">First Name</string>
    <string name="signup_create_an_account">Create an Account</string>

    <string name="signup_hey_there">Hey there,</string>
    <string name="signup_already_have_an_account">Already have an account?</string>
    <string name="signup_login"> Login</string>
    <string name="singup_Register">Register</string>
    <!--    Login-->
    <string name="login_dont_have_an_account">Don’t have an account yet? </string>
    <string name="login_Register"> Register</string>
    <string name="login_Welcome_Back">Welcome Back</string>
    <string name="login_forgot_your_password"><u>Forgot your password?</u></string>
    <!--    After_signup-->
    <string name="after_signup_let_s_complete_your_profile">Let’s complete your profile</string>
    <string name="after_signup_title">It will help us to know more about you!</string>
    <string name="after_signup_choose_gender">Choose Gender</string>
    <string name="after_signup_Date_of_Birth">Date of Birth</string>
    //
    <string name="example_3_input_dialog_title">Enter event title</string>
    <string name="example_3_empty_input_text">Text is empty</string>
    <string name="example_3_dialog_delete_confirmation">Delete this event?</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="example_3_title">Example 3</string>
    <string name="setting">Setting</string>
    <string name="change_themes">Change Themes</string>
    <string name="calculate_the_amount_of_water_you_need_to_use_each_day">Calculate the amount of water you need to use each day</string>
    <string name="setting_noti">Set up notifications to remind you to drink water</string>
    <string name="click_here_for_details">Click here for details</string>
    <string name="activity_tracker">Activity Tracker</string>
    <string name="today_target">Today target</string>
    <string name="water_intake">Water intake</string>
    <string name="food_intake">Food intake</string>
    <string name="sleep_intake">Sleep intake</string>
    <string name="exercise_intake">Exercise today</string>
    <string name="latest_activity">Latest Activity</string>
    <string name="profile">Profile</string>
    <string name="text_loading">____</string>
    <string name="edit">Edit</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="see_more">See more</string>
    <string name="gender">Gender</string>
    <string name="weather">Weather</string>
    <string name="fitness_level">Fitness level</string>
    <string name="water_calculate">Water Calculate</string>
    <string name="calculate">Calculate</string>
    <string name="kg">Kg</string>
    <string name="title_calculate_water">We estimate the amount of water you use each day based on: your age, gender, weight, weather, sports activity level.</string>
    <string name="set_it_as_a_daily_goal">Set it as a daily goal</string>
    <string name="bed_time">Bed Time ,</string>
    <string name="wake_up">Wake Up,</string>
    <string name="start_date_of_notification_display">Start date of notification display</string>
    <string name="set_up_daily_noti">Set up time daily Notification</string>
    <string name="choose_time">Choose Time</string>
    <string name="title">Title</string>
    <string name="Value">Value</string>
    <string name="detail">Detail</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="update_schedule">Update Schedule</string>
    <string name="no_data">No data</string>
    <string name="add_to_meal">Add to Meal</string>
    <string name="step_by_step">Step by Step</string>
    <string name="ingredients_that_you_nwill_need">Ingredients That You\nWill Need</string>
    <string name="descriptions">Descriptions</string>
    <string name="nutrition">Nutrition</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_height">Your Height</string>
    <string name="cm">Cm</string>
    <string name="notification">Notification</string>
    //
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="ActivityLevel">
        <item>SEDENTARY</item>
        <item>MODERATE</item>
        <item>ACTIVE</item>
    </string-array>
    <string-array name="Climate">
        <item>COLD</item>
        <item>MILD</item>
        <item>HOT</item>
        <item>VERY_HOT</item>
    </string-array>
    <string-array name="Meal">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string-array name="Radius">
        <item>1 km</item>
        <item>2 km</item>
        <item>3 km</item>
        <item>4 km</item>
        <item>5 km</item>
        <item>6 km</item>
        <item>7 km</item>
        <item>8 km</item>
        <item>9 km</item>
        <item>10 km</item>
    </string-array>
    <string-array name="Location">
        <item>gym</item>
        <item>restaurant</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tv_calo_caculate_info">We calculate based on your age, gender, weight, height and activity level to estimate the number of calories you should eat.</string>
    <string name="your_age">Your Age</string>
    <string name="confirm">Confirm</string>

</resources>