<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/size_8dp"
                android:background="@drawable/bg_blue_linear_16"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="Calo Calculate"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imgBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgBack" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/size_24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/latest_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgBack" />

            <TextView
                android:id="@+id/tvTitleShouldDrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="You Should drink "
                android:textSize="@dimen/text_size_20sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/tvTitleCalculateWater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginRight="@dimen/size_20dp"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="@dimen/size_16dp"
                android:gravity="center"
                android:text="@string/tv_calo_caculate_info"
                android:textColor="@color/gray1"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleShouldDrink" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spinnerGender"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleCalculateWater">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/tvGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/gender"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilinputAge"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:textColorHint="@color/gray_hint"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerGender"
                app:startIconDrawable="@drawable/calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edt_login"
                    android:hint="@string/your_age"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilinputWeight"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:textColorHint="@color/gray_hint"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilinputAge"
                app:startIconDrawable="@drawable/ic_weight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edt_login"
                    android:hint="@string/your_weight"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/size_16dp"
                android:background="@drawable/bg_radius_pink"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/kg"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tilinputWeight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tilinputWeight" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilinpuHeight"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:textColorHint="@color/gray_hint"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilinputWeight"
                app:startIconDrawable="@drawable/ic_height">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edt_login"
                    android:hint="@string/your_height"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvTitleCm"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/size_16dp"
                android:background="@drawable/bg_radius_pink"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/cm"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tilinpuHeight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tilinpuHeight" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spinnerFitness"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilinpuHeight">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/tvFitness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/fitness_level"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCalculate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_view_radius_blue"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerFitness" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveDailyWater"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_8dp"
                android:background="@drawable/bg_radius_pink"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/set_it_as_a_daily_goal"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerFitness" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>